# czkawka

./: .gitignore  Cargo.toml  README.md  cspell.config.yaml  justfile  pixi.toml  pyproject.toml  taskfile.yaml
.github/config/: czkawka.dict
.github/workflows/: linux_cli.yml  linux_cli_eyra.yml  linux_gui.yml  mac.yml  minimial_version.yml  quality.yml  windows.yml
czkawka_core/: Cargo.toml
czkawka_core/src/: duplicate.rs
czkawka_gui/: Cargo.toml
czkawka_gui/src/: help_functions.rs  initialize_gui.rs  main.rs  notebook_info.rs  opening_selecting_records.rs
czkawka_gui/src/connect_things/: connect_button_compare.rs  connect_header_buttons.rs  connect_popovers_sort.rs  connect_progress_window.rs  connect_settings.rs
instructions/: Compilation.md
