[project]
name = "czkawka"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Joel Van Eenwyk", email = "joel.vaneenwyk@gmail.com" }
]
dependencies = [
    "gvsbuild>=2024.9.0",
    "jinja2>=3.1.4",
    "ninja>=1.11.1.1",
    "meson>=1.5.1",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
universal = true
dev-dependencies = [
    "ruff>=0.6.5",
    "pyright>=1.1.380",
    "pylint>=3.2.7",
    "mypy>=1.11.2",
    "gvsbuild>=2024.9.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/czkawka"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["win-64"]

[tool.pixi.pypi-dependencies]
czkawka = { path = ".", editable = true }

[tool.pixi.dependencies]
gtk4 = ">=4.12.1,<5"
ninja = ">=1.12.1,<2"
meson = ">=1.5.1,<2"
