[project]
name = "czkawka"
version = "0.1.0"
description = "**Czkawka** (_tch•kav•ka_ (IPA: [ˈʧ̑kafka]), \"hiccup\" in Polish) is a simple, fast and free app to remove unnecessary files from your computer."
authors = [{ name = "Rafał Mikrut" }]
readme = "README.md"
requires-python = ">= 3.10"
dependencies = [
    "gvsbuild",
    "jinja2>=3.1.4",
    "ninja>=1.11.1.1",
    "meson>=1.5.1",
    "cmake>=3.31.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
managed = true
package = true
link-mode = "copy"

[tool.uv.pip]
universal = true

[tool.uv.sources]
gvsbuild = { git = "https://github.com/joelvaneenwyk/gvsbuild" }

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["czkawka"]

[dependency-groups]
dev = ["ruff>=0.6.5", "pyright>=1.1.380", "pylint>=3.2.7", "mypy>=1.11.2"]
